--- a/thepinkpanther/src/components/header/index_.html
+++ b/thepinkpanther/src/components/header/index_.html
@@ -45,10 +45,11 @@
             </form>
         </nav>
     </header>
+    <main>
 <div class="container">
     <div class="card-deck">
         
-            <div class="flip-container">
+            <!-- <div class="flip-container">
                 <div class="front">
                     <img src="./img.png" alt="" />
                     <div class="footer">
@@ -155,7 +156,7 @@
                         <br> Much more info
                     </p>
                 </div>
-            </div>
+            </div> -->
         
             <!-- <header>
                 <div class="jumbotron jumbotron-fluid">
@@ -220,11 +221,9 @@
             </div> -->
 
 
-        
-
-       
     </div>
 </div>
+</main>
     <footer class="footer">
 
     </footer>
