--- a/thepinkpanther/src/components/header/styles/main.css
+++ b/thepinkpanther/src/components/header/styles/main.css
@@ -5,4 +5,25 @@
 
 }
 
+main {
+    transform: translateY(0);
+    transition: all .6s ease;
+}
+
+main .open {
+    transform: translateY(5%);
+}
+
+#searchBar {
+    top: 0;
+    left: 0;
+    position: relative;
+    transform: translateY(-100%);
+    transition: all .6s ease;
+}
+
+#searchBar .open {
+    transform: translateY(100%);
+}
+
 
