--- a/thepinkpanther/src/App.css
+++ b/thepinkpanther/src/App.css
@@ -1,28 +1,28 @@
-.App {
-  text-align: center;
+
+.btn-outline-success{
+  color:hotpink !important;
+  border-color: hotpink !important;
+}
+  
+.btn-outline-success:hover{
+  background-color: hotpink;
+  color: gray !important;
+  border-color: gray !important;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.jumbotron-fluid{
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  height: 140px;
+
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.carousel-inner img {
+  width: 100%;
+  max-height: 500px;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.footer{
+  height: 30px;
+  background-color: hotpink
 }
