--- a/thepinkpanther/src/components/Home/main.css
+++ b/thepinkpanther/src/components/Home/main.css
@@ -1,7 +1,8 @@
 .logo{
     text-align: center;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    background-color: #FF0198;
   }
   
   .mgt10{
@@ -10,4 +11,16 @@
   
   .mrr10{
     margin-right: 10px;
+  }
+
+  .logo > button{
+    background-color: transparent;
+    color: white;
+    border: 1px solid white;
+    border-radius: 5px;
+  }
+  .logo > button:hover{
+    color: black;
+    border: 1px solid black;
+    transition: all 0.6s;
   }
