--- a/thepinkpanther/src/App.css
+++ b/thepinkpanther/src/App.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700');
+
 
 .App {
-  background-color: #424247;
+ background-color: #424247; 
+  font-family: 'Roboto', sans-serif;
 }
 
 .btn-outline-success{
