--- a/thepinkpanther/src/components/Card/main.css
+++ b/thepinkpanther/src/components/Card/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:100, 400');
+
 
 /* .card-group {
     display: flex;
@@ -11,7 +13,7 @@
     margin: 20px;
     cursor: pointer;
     width: 240px;
-    height: 540px;
+    height: 400px;
     
     
     transition: all .2s;
@@ -33,9 +35,16 @@
     -o-transform-style:preserve-3d;
     transform-style: preserve-3d;
     
+   
    border-radius: 15px;
    
     
+}
+
+h3 {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 1.2em;
 }
 
 
@@ -47,6 +56,7 @@
     -o-backface-visibility:hidden ;
     backface-visibility: hidden;
     transition: all .5s;
+    border: 1.5px solid #FF0198;
     border-radius: 15px;
     box-shadow: 5px 5px 20px black;
     
@@ -58,7 +68,7 @@
 
 .front img {
     width: 100%;
-    height: 100%;
+    max-height: 340px;
     border-radius: 15px 15px 0 0;
 }
 
@@ -68,8 +78,10 @@
     width: 100%;
     height: 70px;
     position: relative;
+    border-top: none;
     border-radius: 0 0 15px 15px;
-    background-color: hotpink;
+    color:#FF0198;
+    
     
 }
 
@@ -77,9 +89,10 @@
     position: absolute;
     overflow: hidden;
     top: 0;
+    line-height: 20px;
     width: 100%;
-    height: 410px;
-    background: hotpink;
+    height: 408px;
+    background: #FF0198;
     transform: rotateY(-180deg);
     -webkit-transform:rotateY(-180deg) ;
     -moz-transform:rotateY(-180deg) ;
@@ -87,9 +100,13 @@
     -o-transform:rotateY(-180deg) ;
 }
 
+.back h3 {
+    margin-top: 10px;
+}
+
 .back p {
-    padding: 35px;
-    font-family: sans-serif;
+    padding: 20px;
+    font-family: 'Roboto', sans-serif;
     text-align: center;
     color: #333;
 }
