--- a/thepinkpanther/src/components/Card/main.css
+++ b/thepinkpanther/src/components/Card/main.css
@@ -89,10 +89,11 @@ h3 {
     position: absolute;
     overflow: hidden;
     top: 0;
+    color: #FF0198;
     line-height: 20px;
     width: 100%;
     height: 408px;
-    background: #FF0198;
+    background: #333;
     transform: rotateY(-180deg);
     -webkit-transform:rotateY(-180deg) ;
     -moz-transform:rotateY(-180deg) ;
@@ -108,7 +109,7 @@ h3 {
     padding: 20px;
     font-family: 'Roboto', sans-serif;
     text-align: center;
-    color: #333;
+    color: #FF0198;
 }
 
 .flip-container .front {
