--- a/thepinkpanther/src/components/Footer/styles/main.css
+++ b/thepinkpanther/src/components/Footer/styles/main.css
@@ -1,7 +1,8 @@
 .footer{
     width: 98%;
+    margin-top: 20px;
     height: 100px;
-    background-color: #424247;
+    background-color: #646464;
     color:white;
     
 }
