--- a/thepinkpanther/src/components/Card/main.css
+++ b/thepinkpanther/src/components/Card/main.css
@@ -13,7 +13,7 @@
     margin: 20px;
     cursor: pointer;
     width: 240px;
-    height: 400px;
+    height: 340px;
     
     
     transition: all .2s;
@@ -56,7 +56,7 @@ h3 {
     -o-backface-visibility:hidden ;
     backface-visibility: hidden;
     transition: all .5s;
-    border: 1.5px solid #FF0198;
+    /* border: 1.5px solid #FF0198; */
     border-radius: 15px;
     box-shadow: 5px 5px 20px black;
     
@@ -69,20 +69,7 @@ h3 {
 .front img {
     width: 100%;
     max-height: 340px;
-    border-radius: 15px 15px 0 0;
-}
-
-.front .footer {
-    padding-top: 10px;
-    margin-top: -7px;
-    width: 100%;
-    height: 70px;
-    position: relative;
-    border-top: none;
-    border-radius: 0 0 15px 15px;
-    color:#FF0198;
-    
-    
+    border-radius: 15px 15px 15px 15px;
 }
 
 .back {
@@ -92,7 +79,7 @@ h3 {
     color: #FF0198;
     line-height: 20px;
     width: 100%;
-    height: 408px;
+    height: 340px;
     background: #333;
     transform: rotateY(-180deg);
     -webkit-transform:rotateY(-180deg) ;
@@ -106,6 +93,7 @@ h3 {
 }
 
 .back p {
+    margin-top: -10px;
     padding: 20px;
     font-family: 'Roboto', sans-serif;
     text-align: center;
