--- a/thepinkpanther/src/components/Header/Search/main.css
+++ b/thepinkpanther/src/components/Header/Search/main.css
@@ -1,4 +1,16 @@
 
+.btn-outline-success{
+  color:#FF0198 !important;
+  border-color: #FF0198 !important;
+}
+  
+.btn-outline-success:hover{
+  background-color: #FF0198;
+  color: gray !important;
+  border-color: gray !important;
+}
+
+
 /* #searchBar {
  background: gray;  
  position: relative;
