--- a/thepinkpanther/src/components/Carousel/styles/main.css
+++ b/thepinkpanther/src/components/Carousel/styles/main.css
@@ -7,8 +7,6 @@
 
   }
 
-  
-
 .btn-secondary {
   position: relative;
   left:-205px;
@@ -18,6 +16,14 @@
   margin-bottom: -40px;
   border: none;
   
+}
+
+@media screen and (max-width: 400px){
+  .carousel-inner img {
+    margin-top: 55px;
+    transform: scaleY(1.5);
+
+  }
 }
   
 
