--- a/thepinkpanther/src/components/Home/main.css
+++ b/thepinkpanther/src/components/Home/main.css
@@ -1,5 +1,6 @@
 .logo{
     text-align: center;
+    height: 350px;
     padding-top: 30px;
     padding-bottom: 30px;
     background-color: #FF0198;
@@ -23,4 +24,14 @@
     color: black;
     border: 1px solid black;
     transition: all 0.6s;
+  }
+
+  @media screen and (max-width: 400px){
+    .logo{
+    text-align: center;
+    height: 250px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    background-color: #FF0198;
+  }
   }
