--- a/thepinkpanther/src/components/Footer/styles/main.css
+++ b/thepinkpanther/src/components/Footer/styles/main.css
@@ -1,76 +1,35 @@
-.footer{
+footer{
     width: 98%;
-    height: 100px;
+    height: 40px;
     background-color: #646464;
     color:white;
     
 }
 
-.imgFooter{
-    width: 130px;
-    height: 60px ;
-    padding-top: 10px;
-    margin-top: 10px
-}
-
-.imgSkyFooter{
-    width: 60px;
-    height: 60px;
-    padding-top: 10px;
-    margin-top: 5px
-}
-
-.row {
-     margin-left: 20px;
-    }
-    
-.col-sm-2{
-    display: inline-block;
-    margin: 0 auto;
-    height: 60px;
-}
-.col-sm-10{
-    font-size: 12px;
-    height: 60px;
-    
-   
-}
-
-label {
+footer .container {
     margin-top: 20px;
-    line-height: 1.6px;
+    margin-left: 400px;
 }
-
-ul{
+footer>ul{
+    
     list-style: none;
 }
 
 @media screen and (max-width: 400px){
-    .footer{
+    footer{
     width: 98%;
-    height: 70px;
+    height: 30px;
     background-color: #646464;
     color:white;
     }
-    .imgFooter{
-    width: 80px;
-    height: 50px ;
-    /* padding-top: 10px;
-    margin-top: 10px */
+    footer .container {
+    margin-top: 20px;
+    margin-left: -10px;
+    line-height: 2px;
+    font-size: 10px;
 }
-
-.imgSkyFooter{
-    width: 30px;
-    height: 40px;
-    /* padding-top: 10px;
-    margin-top: 5px */
-}
-
-.col-sm-10{
+footer label{
     display: none;
+
 }
-.row {
-    
-     margin: auto 120px 10px;
-    }
-}
+} 
