--- a/thepinkpanther/src/components/Search/main.css
+++ b/thepinkpanther/src/components/Search/main.css
@@ -1,10 +1,11 @@
 
 .App-header {
-    height: 30px;
+    top: 1px;
+    height: 10px;
 }
 
 #header {
-    height: 80px;
+    height: 50px;
 } 
 
 .btn-outline-success{
@@ -20,18 +21,21 @@
 
 
 @media screen and (max-width: 400px){
+   
+    #Find {
+        display:none;
+    }
+
     .App-header {
-        background-color: black;
-    height: 30px;
+    height: auto;
+    
 }
 
 #header {
-    
-    height: 60px;
+    height: auto;
 } 
-#navbarCollapse{
-    width: 300px;
-   background-color: black; 
 }
-  }
+
+
+
 
