--- a/thepinkpanther/src/components/ItemResume/styles/main.css
+++ b/thepinkpanther/src/components/ItemResume/styles/main.css
@@ -1,5 +1,15 @@
+.resume{
+    display: flex;
+    flex-flow: row;
+    flex-wrap: wrap;
+}
 
-aside {
+.colum1{
+    width: 500px;
+    margin-left: 30px;
+}
+.colum2 {
+    width: 600px;
     color: white;
     text-align: justify;
 }
