--- a/thepinkpanther/src/components/Home/styles/main.css
+++ b/thepinkpanther/src/components/Home/styles/main.css
@@ -1,4 +1,5 @@
 
+
 .logo{
     text-align: center;
     height: 300px;
@@ -14,16 +15,11 @@
     margin-right: 10px;
   }
 
-
-  @media screen and (max-width: 400px){
+ @media screen and (max-width: 750px){
     .logo{
-    text-align: center;
-    height: 150px;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    background-color: #FF0198;
-  }
+    display: none;
+    }
   main {
-  margin-top: 50px;
+  margin-top: 40px;
 }
-  }
+  } 
