--- a/thepinkpanther/src/components/ItemCast/styles/main.css
+++ b/thepinkpanther/src/components/ItemCast/styles/main.css
@@ -6,21 +6,13 @@
     padding: 20px;
 }
 
-#reviews ul li{
+.cast{
+    width: 5%;
+    height: 10%;
+    border-radius: 50%;
+}
+
+li{
     display: inline;
-    margin: 15px;
-}
-
-#reviews ul{
-    padding-left: none;
-}
-
-#reviews ul li .cast {
-    display: inline-block;
-    vertical-align: middle;
-    width: 50px;
-    height: 50px;
-    border-radius: 25%;
-    background-size: 100%;
-    margin: 15px 15px;
+    margin: 20px;
 }
