--- a/thepinkpanther/src/components/ItemResume/styles/main.css
+++ b/thepinkpanther/src/components/ItemResume/styles/main.css
@@ -5,9 +5,15 @@
 }
 
 .colum1{
-    width: 500px;
-    margin-left: 30px;
+    text-align: center;
+    margin-left: 20px;
+    margin-top: 20px;
 }
+
+.colum1 img{
+    max-height: 450px;
+}
+
 .colum2 {
     width: 600px;
     color: white;
