--- a/thepinkpanther/src/components/Carousel/styles/main.css
+++ b/thepinkpanther/src/components/Carousel/styles/main.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Righteous');
+
 .carousel-inner img {
     margin-top: 100px;
     transform: scaleY(1.5);
-
   }
 
 .btn-secondary {
@@ -12,7 +13,11 @@
   height: 100px;
   margin-bottom: -40px;
   border: none;
-  
+  font-family: 'Righteous', cursive;
+}
+
+.btn-secondary>h6{
+  font-size: 30px;
 }
 
 @media screen and (max-width: 750px){
