--- a/thepinkpanther/src/components/Footer/styles/main.css
+++ b/thepinkpanther/src/components/Footer/styles/main.css
@@ -1,8 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300');
+
 footer{
     width: 98%;
     height: 40px;
     background-color: #646464;
     color:white;
+    Font-family: 'Roboto', sans-serif;
+    
     
 }
 
