--- a/thepinkpanther/src/components/ItemResume/styles/main.css
+++ b/thepinkpanther/src/components/ItemResume/styles/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Oswald:300|Anton');
+
 .resume{
     display: flex;
     flex-flow: row;
@@ -15,6 +17,8 @@
 }
 
 .colum2 {
+    font-family: 'Oswald', sans-serif;
+    font-size: 20px;
     margin-top: 15px;
     color: white;
 }
