--- a/thepinkpanther/src/components/Jumbotron/styles/main.css
+++ b/thepinkpanther/src/components/Jumbotron/styles/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Anton');
+
 .Series {
     height: 50px;
 }
@@ -6,11 +8,15 @@
   width: 100%;
 }
 
+h3.display-4 {
+  font-family: 'Anton', sans-serif;
+  font-size: 45px;
+  padding-top: 10px;
+}
+
 .jumbotron-fluid{
   margin-bottom: 0px;
   padding-bottom: 0px;
-  /* height: 140px; */
-
 }
 
 
@@ -18,14 +24,33 @@
   .jumbotron-fluid{
   margin-top: 0px;
   padding-top: 0px;
-  height: 10px;
+ height: 50px!important;
 
 }
-  .Jumbotron {
+h3.display-4 {
+  font-family: 'Anton', sans-serif;
+  font-size: 26px!important;
+  padding-top: 10px;
+}
 
+  #Jumbotron {
   padding: 0!important;
   }
 .Series {
     height: 10px;
+}
+}
+
+@media screen and (max-width: 820px){
+  .jumbotron-fluid{
+
+  margin-top: 0px;
+  padding-top: 6px!important;
+  height: 70px!important;
+  }
+  
+ h3> .display-4 {
+  
+  padding-top: 25px!important;
 }
 }
